rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__degree__test__invalid.snap
---
source: crates/rax-nmea/src/rules/degree.rs
expression: result
---
Err(
    RuleError {
        reason: "Missing degree string.",
    },
)
