rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__degree__test__null.snap
---
source: crates/rax-nmea/src/rules/degree.rs
expression: result
---
Ok(
    (
        None,
        "other_data",
    ),
)
