rust/crates/rax-nmea/src/rules/snapshots/rax_nmea__rules__degree__test__valid_negative.snap
---
source: crates/rax-nmea/src/rules/degree.rs
expression: result
---
Ok(
    (
        Some(
            -123.45,
        ),
        "other_data",
    ),
)
